:green_heart: Configurin test execution for CI with jdk 8